# test_task_krocus

./: README.md  pyproject.toml
test_task/: solution.py  solution_2.py
test_task/task_1/: task.txt
test_task/task_2/: task.txt
tests/: test_solution.py
