[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Kirill-Korzunov <kirillkorzunov@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
